@@ -11,6 +11,8 @@ Version 1.31
 - Added a lot of help commands that were missing for owner specific commands.
 - Critical hits removed from $quickdraw
 - $quickdraw winning return is now 1.90x your bet (was 1.7x)
+- Some music commands will now show the thumbnail of the video/song when executing these commands.
+
 
 Version 1.30
 
